[gd_scene load_steps=2 format=3 uid="uid://drj4ydhofnusr"]

[ext_resource type="Script" path="res://addons/gdink/src/gdink_dialog_ui.gd" id="1_hf3qx"]

[node name="ExampleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GDInkDialogUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hf3qx")
ink_story_path = "res://examples/simple_story.json"
auto_start = true
text_speed = 0.02
auto_continue_delay = 1.0
show_debug_info = true

[node name="DialogPanel" type="Panel" parent="GDInkDialogUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharacterName" type="Label" parent="GDInkDialogUI/DialogPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 18
text = "Character Name"

[node name="DialogText" type="RichTextLabel" parent="GDInkDialogUI/DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
text = "Dialog text will appear here..."

[node name="ContinueIndicator" type="TextureRect" parent="GDInkDialogUI/DialogPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="ChoicesPanel" type="Panel" parent="GDInkDialogUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoicesContainer" type="VBoxContainer" parent="GDInkDialogUI/ChoicesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="DebugInfo" type="Label" parent="GDInkDialogUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
text = "Debug Info"